[macOS] Distorted complex text rendering

XMLWordPrintable

    • x86
    • os_x

        Complex text rendering is incorrect and distorted.

        Steps to reproduce:
         - Compile and run the attached Ta.java test

          1. 8u191.png
            8u191.png
            298 kB
          2. openjfx11.png
            openjfx11.png
            294 kB
          3. openjfx11-aljazeera.png
            openjfx11-aljazeera.png
            581 kB
          4. 8u191-aljazeera.png
            8u191-aljazeera.png
            909 kB
          5. ta.html
            0.5 kB
          6. Ta.java
            1 kB
          7. maquee-ta.html
            0.5 kB

              Assignee:
              Arunprasad Rajkumar
              Reporter:
              Arunprasad Rajkumar
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: