8209191: [macOS] Distorted complex text rendering

Reviewed-by: kcr, prr